# mcp-hello-py

./: Dockerfile  README.md  pyproject.toml  requirements.txt
src/: __init__.py  server.py
